tried to fix alignment on different size screens, realized i need some javascript to do the trick. Will come back to redo stylesheet after i learn more.

--- a/style.css
+++ b/style.css
@@ -52,10 +52,9 @@ div {
 }
 
 .LOGODIV {
-	position: left;
-	margin-bottom: 64px;
-	margin-top: 64px;
-	width: 540px;
+	position: center;
+	margin-right: auto;
+	width: auto;
 	height: 360px;
 }
 
